<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="Buffer_Error" Id="{0858a157-5b2a-458d-ba3e-a84d9694e089}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE Buffer_Error :
(
	None := 0,
	Overflow := 1,
	Array_Not_Enabelt := 2,
	Array_To_Small := 3,
	Layout_Not_Size_Buffer := 4,
	Read_Error := 5
) UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>