<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="Set_String_From_Buffer" Id="{09ecb032-daa4-4318-a8a8-a42971dd2e79}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Set_String_From_Buffer : Buffer_Error
VAR_INPUT
	In : STRING;
	Num : USINT;
	Layout : REFERENCE TO Buffer_Layout;
END_VAR

VAR_IN_OUT
	Buffer : ARRAY [*] OF BYTE;
END_VAR

VAR
	Offset : USINT;
	BufferSize : DINT;
	CopyBuffer : String_ByteArray;
	i : UINT;
	EndTrigger : BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[BufferSize := UPPER_BOUND(Buffer, 1) - LOWER_BOUND(Buffer, 1); // berekent buffer size

IF BufferSize = Layout.Buffer_Size THEN
	Set_String_From_Buffer := Buffer_Error.Layout_Not_Size_Buffer; // return error dat buffer size niet overeen komt met buffer layout
	RETURN;
END_IF

IF NOT Layout.Enabel_String_Array THEN
	Set_String_From_Buffer := Buffer_Error.Array_Not_Enabelt; // return error data array niet enabelt is
	RETURN;
END_IF

IF Num > Layout.String_Amount THEN
	Set_String_From_Buffer := Buffer_Error.Array_To_Small; // return error data de num niet in de type array past
	RETURN;
END_IF

Offset := Layout.String_Array_Offset + (Num * 9);

IF Offset + 7 > BufferSize THEN
	Set_String_From_Buffer := Buffer_Error.Wread_Error;
	RETURN;
ELSE
	CopyBuffer.Value := In;
	FOR i:=0 TO 8 BY 1 DO
		IF (NOT (CopyBuffer.AValue[i] = 0)) AND (NOT EndTrigger) THEN
			Buffer[Offset + i] := CopyBuffer.AValue[i];
		ELSE
			EndTrigger := TRUE;
			Buffer[Offset + i] := 0;
		END_IF;
	END_FOR
	Set_String_From_Buffer := Buffer_Error.None;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Set_String_From_Buffer">
      <LineId Id="13" Count="22" />
      <LineId Id="39" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="68" Count="3" />
      <LineId Id="73" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>